[package]
name = "i3blocks-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
